# Python_Automation

./: .gitignore
web_scrape/: pyproject.toml
web_scrape/src/advanced/excel/: make_pivot_table.ipynb
web_scrape/src/advanced/webscrape/playwright/: news_headlines.py
web_scrape/src/advanced/webscrape/selenium/: news_headlines.py
web_scrape/src/basic/pdf/: extract_pdf.py
web_scrape/src/basic/webscrape/: football_data.ipynb  simpsons.ipynb
