[project]
name = "web_scrape"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marcin Pilarczyk", email = "marcinpilarczyk@me.com"},
]
dependencies = ["pandas>=2.2.3", "jupyter>=1.1.1", "lxml>=5.3.0", "selenium>=4.27.1"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
